# habits_traker

./: .coverage  .env.example  .flake8  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_owner.py  0003_alter_habit_owner.py  0004_alter_habit_owner.py  0005_alter_habit_options.py
nginx/: nginx.conf
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options.py
